# rscn-drivers

./: .gitignore  CMakeLists.txt  README.md  TODO.md
assets/: org.rscn.drivers.policy  rscn-drivers-pkhelper  rscn-drivers.desktop
docs/: dev.md
resources/: resources.qrc
src/: driverprofile.cpp  driverprofile.h  hardwaredetector.cpp  hardwaredetector.h  main.cpp  mainwindow.cpp  mainwindow.h  packagemanager.cpp  packagemanager.h
